Made panics more visible

--- a/static/index.html
+++ b/static/index.html
@@ -20,7 +20,7 @@
         </div>
 
         <div class="col-sm">
-          <div class="card fluid error">
+          <div class="card fluid error hidden" id="errorcard">
             <h3>Chip8 has encountered an error!</h3>
             <p>Check the console for more information.</p>
           </div>
