Added project link

--- a/static/index.html
+++ b/static/index.html
@@ -11,7 +11,7 @@
     <div class="container">
       <div class="row">
         <div class="col-sm">
-          <h1>Another Chip8 Emulator! <small>This one is built in Rust, check it out <a href="">here</a>.</small></h1>
+          <h1>Another Chip8 Emulator! <small>This one is built in Rust, check it out <a href="https://github.com/edison-moreland/chip-8">here</a>.</small></h1>
         </div>
       </div>
       <div class="row">
