Dynamically adjust drawing scale to fit canvas

--- a/static/index.html
+++ b/static/index.html
@@ -16,7 +16,7 @@
       </div>
       <div class="row">
         <div class="card fluid">
-          <canvas id="canvas"></canvas>
+          <canvas id="canvas" width="768" height="384"></canvas>
         </div>
 
         <div class="col-sm">
